# AI-LINEbot

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  config.py  docker-compose.yaml  main.py  pyproject.toml  test_db_connection.py
.docker/local/: Dockerfile
api/: db.py  dependencies.py  line_routes.py  main.py  state.py
api/database/seeders/: character_seeder.py  run_seeder.py
api/handlers/: line_handler.py  message_handler.py  user_handler.py
api/models/: __init__.py  base.py  character.py  message.py  user.py
api/repositories/: character_repository.py  message_repository.py  user_repository.py
api/repositories/interfaces/: message_repository_interface.py  (+2 more)
api/requests/: base.py  user.py
api/responses/: error.py  user.py
api/routes/: line_routes.py  message_routes.py  user_routes.py
api/services/: character_service.py  chat_service.py  line_service.py  user_service.py
demo_app/: config.py  db.py  dependencies.py  lambda_handler.py  main.py
demo_app/handlers/: line_handler.py  user_handler.py
demo_app/migrations/: env.py
demo_app/models/: character.py  message.py  user.py
demo_app/repositories/: character_repository.py  message_repository.py  user_repository.py
demo_app/requests/: message.py  user.py
demo_app/responses/: base.py  message.py  user.py
demo_app/services/: character_service.py  chat_service.py  line_service.py  user_service.py
docs/: database.md
migrations/: env.py
migrations/versions/: a530f519124f_create_characters_table.py  a80e4e71b885_create_user_table.py
terraform/: main.tf  outputs.tf  variables.tf
(+12 files in other folders)
