[tool.poetry]
name = "demo-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "demo_app"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
pydantic = "^2.0.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
openai = "^0.27.0"
line-bot-sdk = "^3.5.0"
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
mysqlclient = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
